Thu Aug 17 22:40:05 EDT 2000  John Wehle  (john@feith.com)

	* alias.c (true_dependence, write_dependence_p): A read
	involving a label_ref or the constant pool doesn't create
	a dependency.

	* rtl.h (unchanging): Improve documentation.

2000-08-17  Rodney Brown  <RodneyBrown@mynd.com>

	* cse.c (insert_regs): Remove unused `regno'.

2000-08-17  Neil Booth  <NeilB@earthling.net>

	* (cppinit.c) merge_include_chains: Use remove_dup_dir,
	remove_dup_dirs.  If qtail == brack, remove brack not
	qtail.
	(remove_dup_dir, remove_dup_dirs): New functions.

2000-08-17  Neil Booth  <NeilB@earthling.net>

	* cppinit.c (cpp_cleanup): Free include dir chains.
	* cpplib.c (do_undef): Let _cpp_free_definition make the node void.
	(do_unassert): Free the assert with _cpp_free_definition.
	* cppmacro.c (_cpp_free_definition): Free memory allocated for
	assertions.  Make the node a T_VOID node.

2000-08-17  Neil Booth  <NeilB@earthling.net>

	* cppinit.c (path_include, append_include_chain):
	Remove 2nd parameter (struct cpp_pending *).
	(path_include, initialize_standard_includes, cpp_handle_option):
	Update callers appropriately.
	(cpp_handle_option): Use pend.

2000-08-17  Neil Booth  <NeilB@earthling.net>

	* cppinit.c (sort_options): Remove, put functionality in
	cpp_init.
	(cpp_init): New.
	(initialize_builtins): Free memory.
	(cpp_start_read): Move init_IStable to cpp_init.

	* cpplib.h (cpp_init): New prototype.
	* cppmain.c (main): Call cpp_init.

Thu Aug 17 13:20:32 EDT 2000  John Wehle  (john@feith.com)

	* rtlanal.c (rtx_unstable_p): Use CONSTANT_P.
	(rtx_unstable_p, rtx_varies_p): Process vectors.

2000-08-16  Niibe Yutaka  <gniibe@m17n.org>, Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* config/sh/lib1funcs.asm (GLOBAL): Define.  Use for all
	references to GLOBAL symbols.  Use LOCAL where appropriate.

2000-08-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* configure.in (*-ibm-aix4.[12]*): Delete test for gnu ld.  Always
	use t-aix41 when host == target.
