@@ -1,3 +1,8 @@
+2000-08-17  Richard Henderson  <rth@cygnus.com>
+
+	* config/ia64/ia64.c (spill_restore_mem): Handle emitting
+	the first insn in a sequence.
+
 Thu Aug 17 22:40:05 EDT 2000  John Wehle  (john@feith.com)
 
 	* alias.c (true_dependence, write_dependence_p): A read
